--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Users\\cuoil\\Miniconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\cuoil\\Miniconda3\\python.exe",
+    "cSpell.words": [
+        "ROBOTSTXT",
+        "chdir",
+        "cmdline"
+    ]
 }
