prepare to generate wordcloud

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "ROBOTSTXT",
         "chdir",
         "cmdline",
-        "nltk"
+        "nltk",
+        "numpy",
+        "pyplot"
     ]
 }
