--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "chdir",
         "cmdline",
         "imshow",
+        "matplotlib",
         "nltk",
         "numpy",
         "pyplot",
