store result in csv

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "ROBOTSTXT",
         "chdir",
         "cmdline",
+        "iloc",
         "imshow",
+        "isna",
         "matplotlib",
         "nltk",
         "numpy",
