add link_keyword data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,15 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "cSpell.words": [
+        "APPSTACLE",
+        "DTLS",
         "Lemmatizer",
+        "Modak",
+        "PPMP",
         "ROBOTSTXT",
         "chdir",
         "cmdline",
+        "contactless",
         "eclips",
         "iloc",
         "imshow",
