--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "matplotlib",
         "nltk",
         "numpy",
+        "ptidej",
         "punkt",
         "pyplot",
         "tablefmt"
