tokenize words with pos tag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,24 +3,51 @@
     "python.linting.enabled": true,
     "cSpell.words": [
         "APPSTACLE",
+        "Arcom",
         "DTLS",
+        "Eurotech",
+        "Hono",
+        "Keti",
+        "Keyple",
         "Lemmatizer",
+        "MQTT",
+        "MQTT’s",
         "Modak",
+        "Modbus",
+        "Modelica",
+        "Mosquitto",
+        "OPCUA",
         "PPMP",
+        "Paho's",
+        "Ponte",
         "ROBOTSTXT",
+        "SCADA",
+        "VSAT",
+        "WAGO",
+        "Websockets",
         "chdir",
         "cmdline",
         "contactless",
+        "diac",
         "eclips",
         "iloc",
         "imshow",
         "isna",
+        "kapua",
+        "kuksa",
+        "leshan",
         "matplotlib",
         "nltk",
         "numpy",
+        "paho",
         "ptidej",
         "punkt",
         "pyplot",
-        "tablefmt"
+        "s",
+        "tablefmt",
+        "tahu",
+        "tinydtls",
+        "unide",
+        "wakaama"
     ]
 }
