save pattern result to file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,11 +20,13 @@
         "PPMP",
         "Paho's",
         "Ponte",
+        "RGBA",
         "ROBOTSTXT",
         "SCADA",
         "VSAT",
         "WAGO",
         "Websockets",
+        "cframe",
         "chdir",
         "cmdline",
         "contactless",
