finished grammars.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,9 +26,11 @@
         "VSAT",
         "WAGO",
         "Websockets",
+        "appli",
         "cframe",
         "chdir",
         "cmdline",
+        "commun",
         "contactless",
         "diac",
         "eclips",
