--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Modbus",
         "Modelica",
         "Mosquitto",
+        "Noverlap",
         "OPCUA",
         "PPMP",
         "Paho's",
