--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
         "cmdline",
         "commun",
         "contactless",
+        "crossorigin",
+        "cyclonedds",
         "diac",
         "eclips",
         "iloc",
@@ -51,6 +53,7 @@
         "s",
         "tablefmt",
         "tahu",
+        "thingweb",
         "tinydtls",
         "tolist",
         "unide",
