--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": "Python: Test",
-        //     "type": "python",
-        //     "request": "launch",
-        //     "program": "${workspaceFolder}/run_test.py",
-        //     "console": "integratedTerminal"
-        // },
+        {
+            "name": "Python: Test",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/run_test.py",
+            "console": "integratedTerminal"
+        },
         {
             "name": "Python: Run Scrapy and NLTK",
             "type": "python",
