fix code smells

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,7 @@
         "wakaama"
     ],
     "liveServer.settings.port": 5500,
-    "compile-hero.disable-compile-files-on-did-save-code": false,
+    "compile-hero.disable-compile-files-on-did-save-code": true,
     "compile-hero.scss-output-directory": "./",
     "compile-hero.scss-output-toggle": true,
     "compile-hero.jade-output-toggle": false,
