check for english word

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "appli",
         "cframe",
         "chdir",
+        "choco",
         "cmdline",
         "commun",
         "contactless",
@@ -40,6 +41,7 @@
         "iloc",
         "imshow",
         "isna",
+        "jsonpickle",
         "kapua",
         "kuksa",
         "leshan",
@@ -49,6 +51,7 @@
         "paho",
         "ptidej",
         "punkt",
+        "pyenchant",
         "pyplot",
         "s",
         "tablefmt",
