review 2 wordclouds at the sametime

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "pyenchant",
         "pyplot",
         "s",
+        "secos",
         "tablefmt",
         "tahu",
         "thingweb",
